--- a/templates/sbnext-finalium/forum/memberlist.twig
+++ b/templates/sbnext-finalium/forum/memberlist.twig
@@ -1,16 +1,16 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Memberlist{% endblock %}
+{% block title %}{{ __("Memberlist") }}{% endblock %}
 
 	{% block content %}
 <table class="c1">
-	<tr class="h"><td class="b h" colspan="2">Memberlist</td></tr>
+	<tr class="h"><td class="b h" colspan="2">{{ __("Memberlist") }}</td></tr>
 	<tr>
-		<td class="b n1" width="80">Sort by:</td>
+		<td class="b n1" width="80">{{ __("Sort by:") }}</td>
 		<td class="b n2 center">
-			{{ mlink('Posts', '', page, orderby) }}
-			&bull; {{ mlink('Username', 'name', page, orderby) }}
-			&bull; {{ mlink('Registration date', 'reg', page, orderby) }}
+			{{ mlink(__('Posts'), '', page, orderby) }}
+			&bull; {{ mlink(__('Username'), 'name', page, orderby) }}
+			&bull; {{ mlink(__('Registration date'), 'reg', page, orderby) }}
 			&bull; {{ mlink('[ &#x25BC; ]', sort, page, 'd') }}
 			&nbsp; {{ mlink('[ &#x25B2; ]', sort, page, 'a') }}
 		</td>
@@ -18,11 +18,11 @@
 </table><br>
 <table class="c1">
 	<tr class="h">
-		<td class="b h" width="32">ID</td>
-		<td class="b h" width="62">Picture</td>
-		<td class="b h">Name</td>
-		<td class="b h" width="130">Registered on</td>
-		<td class="b h" width="50">Posts</td>
+		<td class="b h" width="32">{{ __("ID") }}</td>
+		<td class="b h" width="62">{{ __("Picture") }}</td>
+		<td class="b h">{{ __("Name") }}</td>
+		<td class="b h" width="130">{{ __("Registered on") }}</td>
+		<td class="b h" width="50">{{ __("Posts") }}</td>
 	</tr>
 	{% set i = 1 %}
 	{% for user in users %}
@@ -30,7 +30,7 @@
 		<td class="b center">{{ user.id }}</td>
 		<td class="b center">
 			{% if user.avatar %}
-				<img src="assets/profpic/{{ user.name }}" width="60" height="60">
+				<img src="/assets/profpic/{{ user.name }}" width="60" height="60">
 			{% endif %}
 		</td>
 		<td class="b">{{ userlink(user) }}</td>
