--- a/templates/sbnext-finalium/forum/private.twig
+++ b/templates/sbnext-finalium/forum/private.twig
@@ -9,9 +9,9 @@
 	<tr class="h">
 		<td class="b" width="17">&nbsp;</td>
 		<td class="b" style="width:30px">&nbsp;</td>
-		<td class="b">Title</td>
+		<td class="b">{{ __("Title") }}</td>
 		<td class="b" width="130">{{ fieldn }}</td>
-		<td class="b" width="130">Sent on</td>
+		<td class="b" width="130">{{ __("Sent on") }}</td>
 	</tr>
 {% set i = 1 %}
 {% for pmsg in pmsgs %}
@@ -26,7 +26,7 @@
 	</tr>
 	{% set i = i + 1 %}
 {% else %}
-	{{ if_empty_query("There are no private messages.", 5) }}
+	{{ if_empty_query(__("There are no private messages."), 5) }}
 {% endfor %}
 </table>
 {{ fpagelist | raw }}
