--- a/templates/sbnext-finalium/forum/sendprivate.twig
+++ b/templates/sbnext-finalium/forum/sendprivate.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Send private message{% endblock %}
+{% block title %}{{ __("Send private message") }}{% endblock %}
 
 	{% block precontent %}
 {% if error %}
@@ -11,30 +11,30 @@
 	{% block content %}
 {{ render_page_bar(topbot) }}
 
-{% if action == 'Preview' %}
+{% if action == __("Preview") %}
 	<br>
-	<table class="c1"><tr class="h"><td class="b h" colspan="2">{{ title }} (Message preview)</table>
+	<table class="c1"><tr class="h"><td class="b h" colspan="2">{{ title }} {{ __("(Message preview)") }}</table>
 	{{ threadpost(post) }}
 {% endif %}
 
 <br>
 <form action="sendprivate.php" method="post">
 	<table class="c1">
-		<tr class="h"><td class="b h" colspan="2">Send message</td></tr>
+		<tr class="h"><td class="b h" colspan="2">{{ __("Send message") }}</td></tr>
 		<tr>
-			<td class="b n1 center" width="120">Send to:</td>
+			<td class="b n1 center" width="120">{{ __("Send to:") }}</td>
 			<td class="b n2"><input type="text" name="userto" size="30" maxlength="50" value="{{ userto }}"></td>
 		</tr><tr>
-			<td class="b n1 center">Title:</td>
+			<td class="b n1 center">{{ __("Title:") }}</td>
 			<td class="b n2"><input type="text" name="title" size="75" maxlength="255" value="{{ title }}"></td>
 		</tr><tr>
-			<td class="b n1 center">Message:</td>
+			<td class="b n1 center">{{ __("Message:") }}</td>
 			<td class="b n2"><textarea name="message" id="message" rows="15" cols="80">{{ quotetext }}</textarea></td>
 		</tr><tr>
 			<td class="b n1"></td>
 			<td class="b n1">
-				<input type="submit" name="action" value="Submit">
-				<input type="submit" name="action" value="Preview">
+				<input type="submit" name="action" value="{{ __("Submit") }}">
+				<input type="submit" name="action" value="{{ __("Preview") }}">
 			</td>
 		</tr>
 	</table>
