--- a/forum/templates/sbnext-finalium/_layout.twig
+++ b/forum/templates/sbnext-finalium/_layout.twig
@@ -59,16 +59,16 @@
 				<div class="guide-channels-list">
 					<ul class="guide">
 						<li class="guide-channel">
-							<a href="/" class="guide-item"><img class="thumb" src="../assets/logo_square_icon.png">{{ __("Home") }}</a>
+							<a href="/" class="guide-item"><div class="thumb">{{ icon_alt('house', 16) }}</div><div>{{ __("Home") }}</div></a>
 						</li>
 						<li class="guide-channel">
-							<a href="browse.php" class="guide-item"><img class="thumb" src="../assets/logo_square_icon.png">{{ __("Videos") }}</a>
+							<a href="browse.php" class="guide-item"><div class="thumb">{{ icon_alt('film', 16) }}</div><div>{{ __("Videos") }}</div></a>
 						</li>
 						<li class="guide-channel">
-							<a href="music.php" class="guide-item"><img class="thumb" src="../assets/logo_square_icon.png">{{ __("Music") }}</a>
+							<a href="music.php" class="guide-item"><div class="thumb">{{ icon_alt('music-note-beamed', 16) }}</div><div>{{ __("Music") }}</div></a>
 						</li>
 						<li class="guide-channel">
-							<a href="/forum/" class="guide-item"><img class="thumb" src="../assets/logo_square_icon.png">{{ __("Forums") }}</a>
+							<a href="/forum/" class="guide-item"><div class="thumb">{{ icon_alt('chat-left-text', 16) }}</div><div>{{ __("Forums") }}</div></a>
 						</li>
 					</ul>
 				</div>
