--- a/templates/sbnext-finalium/_error.twig
+++ b/templates/sbnext-finalium/_error.twig
@@ -3,6 +3,10 @@
 {% block title %}{% endblock %}
 
 	{% block content %}
-	SOMETHING BROKE!!!!!!
-	{{ err_message }}
+<div class="bg-dark" style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;">
+	<h2 class="text-white">{{ err_message }}</h2>
+	<hr class="text-muted">
+	<p class="text-white">{{ __("Sorry about that.") }}</p>
+	<div style="text-align:center;margin:auto"><img src="assets/logo_template.png" style="max-width:150px;"></div>
+</div>
 	{% endblock %}
