fix errors that icty didn't fix

--- a/templates/sbnext-finalium/_error.twig
+++ b/templates/sbnext-finalium/_error.twig
@@ -3,10 +3,10 @@
 {% block title %}{% endblock %}
 
 	{% block content %}
-<div class="bg-dark" style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;">
-	<h2 class="text-white">{{ err_message }}</h2>
-	<hr class="text-muted">
-	<p class="text-white">{{ __("Sorry about that.") }}</p>
-	<div style="text-align:center;margin:auto"><img src="assets/logo_template.png" style="max-width:150px;"></div>
+<div class="bg-dark" style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;color:white;">
+	<h2>{{ err_message }}</h2>
+	<hr>
+	<p>{{ __("Sorry about that.") }}</p>
+	<div style="text-align:center;margin:auto"><img src="assets/logo_monochrome.png" style="max-width:150px;"></div>
 </div>
 	{% endblock %}
