--- a/assets/retro/styles.css
+++ b/assets/retro/styles.css
@@ -1,12 +1,12 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	background-color: #FFFFFF;
-	color: #222222;
+	background-color: #1b1d20;
+	color: #fff;
 }
 
 a:link, a:visited, a:active {
-	color: #0033CC;
+	color: #8DAEEC;
 }
 
 td {
@@ -77,7 +77,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 .footer {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 11px;
-	color: #111111;
+	color: #c8c8c8;
 }
 
 .success {
@@ -111,16 +111,16 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 }
 
 .moduleEntry {
-	background-color: #DDD;
+	background-color: #111111;
 	background-image: url(table_results_bg.gif);
 	background-position: left top;
 	background-repeat: repeat-x;
-	border-bottom: 1px dashed #999999;
+	border-bottom: 1px dashed #515151;
 	padding: 10px;
 }
 
 .moduleEntryThumb {
-	border: 5px solid #FFFFFF;
+	border: 5px solid #313131;
 	margin-right: 10px;
 }
 
@@ -134,7 +134,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 .moduleEntryDescription {
 	font-size: 12px;
 	margin-bottom: 6px;
-	color: #333;
+	color: #fff;
 	padding-right: 10px;
 
 }
@@ -142,26 +142,26 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 .moduleEntryTags {
 	font-size: 12px;
 	margin-bottom: 5px;
-	color: #444;
+	color: #bdbdbd;
 }
 
 .moduleEntryDetails {
 	font-size: 11px;
 	margin-bottom: 5px;
-	color: #444;
+	color: #a8a8a8;
 }
 
 .moduleTitle {
 	font-size: 14px;
 	font-weight: bold;
 	margin: 0 0 5px 5px;
-	color: #444;
+	color: #fff;
 }
 
 .moduleTitleBar {
 	width: 100%;
-	background-color: #CCC;
-	border-bottom: 1px dashed #999;
+	background-color: #3d3d3d;
+	border-bottom: 1px dashed #515151;
 }
 
 .moduleFeatured {
@@ -169,7 +169,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 	background-image: url(table_results_bg.gif);
 	background-position: left top;
 	background-repeat: repeat-x;
-	border-bottom: 1px dashed #999999;
+	border-bottom: 1px dashed #515151;
 	padding: 5px 5px 15px;
 }
 
