--- a/templates/retro/_layout.twig
+++ b/templates/retro/_layout.twig
@@ -11,12 +11,12 @@
 <body>
 <table width="800" cellspacing="0" cellpadding="0" border="0" align="center">
 	<tbody><tr>
-		<td style="padding-bottom: 25px;" bgcolor="#FFFFFF">
+		<td style="padding-bottom: 25px;">
 		
 
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
 	<tbody><tr valign="top">
-		<td rowspan="2" style="padding: 0px 5px 5px 5px;" width="130"><a href="index.php"><img src="./assets/retro/logo_sm.gif" alt="YouTube" width="120" height="48" border="0"></a></td>
+		<td rowspan="2" style="padding: 0px 5px 5px 5px;" width="130"><a href="index.php"><img src="./assets/retro/logo_sm.gif" alt="squareBracket" width="120" height="48" border="0"></a></td>
 		<td valign="top">
 		
 		<table width="670" cellspacing="0" cellpadding="0" border="0">
@@ -29,15 +29,11 @@
 				{% if log %}
 				<td>Hello, <a href="user.php?name={{ userdata.name }}" class="bold">{{ userdata.title }}</a></td>
 				<td>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-				<td><a href="signout.php">Log Out</a></td>
-				<td>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-				<td style="padding-right: 5px;"><a href="help.php">Help</a></td>
+				<td><a href="logout.php">Log Out</a></td>
 				{% else %}
 				<td><a href="signup.php" class="bold">Sign Up</a></td>
 				<td>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
 				<td><a href="login.php">Log In</a></td>
-				<td>&nbsp;&nbsp;|&nbsp;&nbsp;</td>
-				<td style="padding-right: 5px;"><a href="help.php">Help</a></td>
 				{% endif %}
 
 				
@@ -73,7 +69,7 @@
 			
 </tbody></table>
 
-<table style="margin: 5px 0px 10px 0px;" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#D5E5F5" align="center">
+<table style="margin: 5px 0px 10px 0px;" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#40454a" align="center">
 	<tbody><tr>
 		<td><img src="./assets/retro/box_login_tl.gif" width="5" height="5"></td>
 		<td><img src="./assets/retro/pixel.gif" width="1" height="5"></td>
