--- a/templates/retro/index.twig
+++ b/templates/retro/index.twig
@@ -4,7 +4,7 @@
 	<tbody><tr valign="top">
 		<td style="padding-right: 15px;">
 		
-		<table width="595" cellspacing="0" cellpadding="0" border="0" bgcolor="#E5ECF9" align="center">
+		<table width="595" cellspacing="0" cellpadding="0" border="0" bgcolor="#42454a" align="center">
 			<tbody><tr>
 				<td><img src="./assets/retro/box_login_tl.gif" width="5" height="5"></td>
 				<td width="100%"><img src="./assets/retro/pixel.gif" width="1" height="5"></td>
@@ -16,16 +16,16 @@
 				
 				<table width="100%" cellspacing="0" cellpadding="0" border="0">
 					<tbody><tr valign="top">
-					<td style="border-right: 1px dashed #369; padding: 0px 10px 10px 10px; color: #444;" width="33%">
-					<div style="font-size: 16px; font-weight: bold; margin-bottom: 5px;"><a href="my_videos_upload.php">Upload</a></div>
+					<td style="border-right: 1px dashed #369; padding: 0px 10px 10px 10px; color: #EEE;" width="33%">
+					<div style="font-size: 16px; font-weight: bold; margin-bottom: 5px;">Upload</div>
 					Quickly upload and tag content in almost any format.
 					</td>
-					<td style="border-right: 1px dashed #369; padding: 0px 10px 10px 10px; color: #444;" width="33%">
-					<div style="font-size: 16px; font-weight: bold; margin-bottom: 5px;"><a href="browse.php">Watch</a></div>
+					<td style="border-right: 1px dashed #369; padding: 0px 10px 10px 10px; color: #EEE;" width="33%">
+					<div style="font-size: 16px; font-weight: bold; margin-bottom: 5px;">Watch</div>
 					Instantly find and watch fast streaming content.
 					</td>
-					<td style="padding: 0px 10px 10px 10px; color: #444;" width="33%">
-					<div style="font-size: 16px; font-weight: bold; margin-bottom: 5px;"><a href="my_friends_invite.php">Share</a></div>
+					<td style="padding: 0px 10px 10px 10px; color: #EEE;" width="33%">
+					<div style="font-size: 16px; font-weight: bold; margin-bottom: 5px;">Share</div>
 					Easily share your content with family, friends, or co-workers.
 					</td>
 					</tr>
@@ -41,7 +41,7 @@
 			</tr>
 		</tbody></table><br>
 		
-		<table width="595" cellspacing="0" cellpadding="0" border="0" bgcolor="#CCCCCC" align="center">
+		<table width="595" cellspacing="0" cellpadding="0" border="0" bgcolor="#3d3d3d" align="center">
 			<tbody><tr>
 				<td><img src="./assets/retro/box_login_tl.gif" width="5" height="5"></td>
 				<td width="100%"><img src="./assets/retro/pixel.gif" width="1" height="5"></td>
@@ -60,90 +60,23 @@
 					<div class="moduleEntry">
 					<table width="565" cellspacing="0" cellpadding="0" border="0">
 						<tbody><tr valign="top">
-							<td><a href="index.php?v=WEUN1h6r1U0"><img src="{{ video_thumbnail(data.video_id) }}" class="moduleEntryThumb" width="120" height="90"></a></td>
-							<td width="100%"><div class="moduleEntryTitle"><a href="index.php?v=WEUN1h6r1U0">{{ video.title }}</a></div>
+							<td><a href="watch.php?v={{video.id}}"><img src="{{ video_thumbnail(video.id) }}" class="moduleEntryThumb" width="120" height="90"></a></td>
+							<td width="100%"><div class="moduleEntryTitle"><a href="watch.php?v={{video.id}}">{{ video.title }}</a></div>
 							<div class="moduleEntryDescription">{{ video.description }}</div>
 							<div class="moduleEntryTags">
-							Tags // <a href="results.php?search=candid">candid</a> : <a href="results.php?search=shot">shot</a> : <a href="results.php?search=cute">cute</a> : <a href="results.php?search=girl">girl</a> : 							</div>
-							<div class="moduleEntryDetails">Added: July 24, 2005 by <a href="profile.php?user=tunafat">tunafat</a></div>
-							<div class="moduleEntryDetails">Views: 758 | Comments: 3</div>
+							Tags //
+						{% for tag in video.tags|json_decode %}
+							{{ tag }} 
+						{% else %}
+							{{ __("None") }}
+						{% endfor %}</div>
+							<div class="moduleEntryDetails">Added: {{ video.time | date() }} by {{ userlink(video, 'u_') }}</div>
+							<div class="moduleEntryDetails">Views: {{ video.views }} | Likes: Not indexed | Dislikes: Not indexed</div>
 							</td>
 						</tr>
 					</tbody></table>
 					</div>
-				{% endfor %}	
-					
-					<div class="moduleEntry">
-					<table width="565" cellspacing="0" cellpadding="0" border="0">
-						<tbody><tr valign="top">
-							<td><a href="index.php?v=8LhJJc3WOAg"><img src="get_still.php?video_id=8LhJJc3WOAg" class="moduleEntryThumb" width="120" height="90"></a></td>
-							<td width="100%"><div class="moduleEntryTitle"><a href="index.php?v=8LhJJc3WOAg">Interview: Joanne Saunder, Leading Brands</a></div>
-							<div class="moduleEntryDescription">Bite of Seattle 2005. Joanne Saunder, VP Marketing Leading Brands, talks about TrueBlue, a natural fruit drink and TREK, a sports drink.
-<br>
-
-<br>
-http://www.lbix.com/brands/default2.asp?b=trueblue
-<br>
-
-<br>
-http://www.lbix.com/brands/default2.asp?b=trek</div>
-							<div class="moduleEntryTags">
-							Tags // <a href="results.php?search=biteofseattle">biteofseattle</a> : <a href="results.php?search=trueblue">trueblue</a> : <a href="results.php?search=drink">drink</a> : <a href="results.php?search=natural">natural</a> : <a href="results.php?search=sports">sports</a> : <a href="results.php?search=seattle">seattle</a> : 							</div>
-							<div class="moduleEntryDetails">Added: July 25, 2005 by <a href="profile.php?user=digitalreporter">digitalreporter</a></div>
-							<div class="moduleEntryDetails">Views: 86 | Comments: 0</div>
-							</td>
-						</tr>
-					</tbody></table>
-					</div>
-					
-					
-					<div class="moduleEntry">
-					<table width="565" cellspacing="0" cellpadding="0" border="0">
-						<tbody><tr valign="top">
-							<td><a href="index.php?v=jkdJF6rPIrE"><img src="get_still.php?video_id=jkdJF6rPIrE" class="moduleEntryThumb" width="120" height="90"></a></td>
-							<td width="100%"><div class="moduleEntryTitle"><a href="index.php?v=jkdJF6rPIrE">AGM-142 Raptor Missile</a></div>
-							<div class="moduleEntryDescription">The AGM-142 Raptor is the US designation for Israel's medium range, precision guided, air-to-surface Popeye missile.</div>
-							<div class="moduleEntryTags">
-							Tags // <a href="results.php?search=Missile">Missile</a> : <a href="results.php?search=Explosion">Explosion</a> : <a href="results.php?search=Blast">Blast</a> : 							</div>
-							<div class="moduleEntryDetails">Added: July 26, 2005 by <a href="profile.php?user=Vergolinx">Vergolinx</a></div>
-							<div class="moduleEntryDetails">Views: 263 | Comments: 0</div>
-							</td>
-						</tr>
-					</tbody></table>
-					</div>
-					
-					
-					<div class="moduleEntry">
-					<table width="565" cellspacing="0" cellpadding="0" border="0">
-						<tbody><tr valign="top">
-							<td><a href="index.php?v=1L-xk_c2LBE"><img src="get_still.php?video_id=1L-xk_c2LBE" class="moduleEntryThumb" width="120" height="90"></a></td>
-							<td width="100%"><div class="moduleEntryTitle"><a href="index.php?v=1L-xk_c2LBE">ky Stuntin!</a></div>
-							<div class="moduleEntryDescription">Lonely sunday practice!</div>
-							<div class="moduleEntryTags">
-							Tags // <a href="results.php?search=f4i">f4i</a> : <a href="results.php?search=gsxr">gsxr</a> : <a href="results.php?search=stunting">stunting</a> : <a href="results.php?search=Ky">Ky</a> : 							</div>
-							<div class="moduleEntryDetails">Added: July 24, 2005 by <a href="profile.php?user=dilligaf">dilligaf</a></div>
-							<div class="moduleEntryDetails">Views: 555 | Comments: 1</div>
-							</td>
-						</tr>
-					</tbody></table>
-					</div>
-					
-					
-					<div class="moduleEntry">
-					<table width="565" cellspacing="0" cellpadding="0" border="0">
-						<tbody><tr valign="top">
-							<td><a href="index.php?v=A1jcYJn24SM"><img src="get_still.php?video_id=A1jcYJn24SM" class="moduleEntryThumb" width="120" height="90"></a></td>
-							<td width="100%"><div class="moduleEntryTitle"><a href="index.php?v=A1jcYJn24SM">Brad's ugly.</a></div>
-							<div class="moduleEntryDescription">Waxing him.</div>
-							<div class="moduleEntryTags">
-							Tags // <a href="results.php?search=wax">wax</a> : <a href="results.php?search=hair">hair</a> : <a href="results.php?search=legs">legs</a> : 							</div>
-							<div class="moduleEntryDetails">Added: July 21, 2005 by <a href="profile.php?user=amerwitz">amerwitz</a></div>
-							<div class="moduleEntryDetails">Views: 393 | Comments: 1</div>
-							</td>
-						</tr>
-					</tbody></table>
-					</div>
-					
+				{% endfor %}
 									
 				</td>
 				<td><img src="./assets/retro/pixel.gif" width="5" height="1"></td>
@@ -159,28 +92,11 @@ http://www.lbix.com/brands/default2.asp?b=trek</div>
 		</td>
 		<td width="180">
 		
-		<table width="180" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFEEBB" align="center">
+		<table width="180" cellspacing="0" cellpadding="0" border="0" align="center">
 			<tbody><tr>
-				<td><img src="./assets/retro/box_login_tl.gif" width="5" height="5"></td>
-				<td><img src="./assets/retro/pixel.gif" width="1" height="5"></td>
-				<td><img src="./assets/retro/box_login_tr.gif" width="5" height="5"></td>
-			</tr>
-			<tr>
-				<td><img src="./assets/retro/pixel.gif" width="5" height="1"></td>
-				<td width="170">
-		
-								
-				<div style="font-size: 16px; font-weight: bold; text-align: center; padding: 5px 5px 10px 5px;"><a href="signup.php">Sign up for your free account!</a></div>
-				
-								
-				</td>
-				<td><img src="./assets/retro/pixel.gif" width="5" height="1"></td>
-			</tr>
-			<tr>
-				<td><img src="./assets/retro/box_login_bl.gif" width="5" height="5"></td>
-				<td><img src="./assets/retro/pixel.gif" width="1" height="5"></td>
-				<td><img src="./assets/retro/box_login_br.gif" width="5" height="5"></td>
-			</tr>
+			<h4 style="font-size: 13px;">What's new?</h4>
+			<p>This is sbRetro, which is a specialized version of squareBracket meant
+			for older setups.</p>
 		</tbody></table>
 		</td>
 	</tr>
