--- a/templates/retro/index.twig
+++ b/templates/retro/index.twig
@@ -60,8 +60,8 @@
 					<div class="moduleEntry">
 					<table width="565" cellspacing="0" cellpadding="0" border="0">
 						<tbody><tr valign="top">
-							<td><a href="watch.php?v={{video.id}}"><img src="{{ video_thumbnail(video.id) }}" class="moduleEntryThumb" width="120" height="90"></a></td>
-							<td width="100%"><div class="moduleEntryTitle"><a href="watch.php?v={{video.id}}">{{ video.title }}</a></div>
+							<td><a href="watch.php?v={{video.video_id}}"><img src="{{ video_thumbnail(video.video_id) }}" class="moduleEntryThumb" width="120" height="90"></a></td>
+							<td width="100%"><div class="moduleEntryTitle"><a href="watch.php?v={{video.video_id}}">{{ video.title }}</a></div>
 							<div class="moduleEntryDescription">{{ video.description }}</div>
 							<div class="moduleEntryTags">
 							Tags //
