flash player (NEARLY FUNCTIONAL)
besides the audio if you have flash 8 lmao

--- a/templates/retro/watch.twig
+++ b/templates/retro/watch.twig
@@ -67,20 +67,9 @@ function CommentHandler()
 		
 		<div style="text-align: center; padding-bottom: 10px;">
 		<div id="flashcontent">
-		<div style="padding: 20px; font-size:14px; font-weight: bold;">
-			Hello, you either have JavaScript turned off or an old version of Macromedia's Flash Player, <a href="http://www.macromedia.com/go/getflashplayer/">click here</a> to get the latest flash player.
+		<embed name="player" width="425" height="350" id="player" src="player.swf" flashvars="video_id=/videos/MGK4__YyOWY.flv" type="application/x-shockwave-flash" quality="high" bgcolor="#FFFFFF">
 		</div>
 		</div>
-		</div>
-		
-		<script type="text/javascript">
-			// <![CDATA[
-			
-			var fo = new FlashObject("player.swf?video_id=vy8evhya_9E&l=30", "player", "425", "350", 7, "#FFFFFF");
-			fo.write("flashcontent");
-			
-			// ]]>
-		</script>
 
 		<table width="425" cellspacing="0" cellpadding="0" border="0" align="center">
 			<tbody><tr>
